force-app/main/default/objects/BIGOTOOL_Settings__c/BIGOTOOL_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Runtime toggles and per user/profile/org settings for the Big Object Tooling package.</description>
    <label>BIGOTOOL Settings</label>
</CustomObject>