force-app/main/default/objects/BIGOTOOL_Settings__c/fields/Archiving_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Archiving_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Org/profile/user toggle for archiving.</description>
    <label>Archiving Enabled</label>
    <type>Checkbox</type>
</CustomField>