force-app/main/default/objects/BIGOTOOL_Settings__c/fields/Debug_Mode__c.field-meta.xml
<CustomField>
    <fullName>Debug_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Verbose Archive_Job_Log__b writes.</description>
    <label>Debug Mode</label>
    <type>Checkbox</type>
</CustomField>