force-app/main/default/objects/BIGOTOOL_Settings__c/fields/Logging_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Logging_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Org/profile/user toggle for field history logging.</description>
    <label>Logging Enabled</label>
    <type>Checkbox</type>
</CustomField>