force-app/main/default/objects/BIGOTOOL_Settings__c/fields/Master_Switch__c.field-meta.xml
<CustomField>
    <fullName>Master_Switch__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Global kill-switch for all BIGOTOOL automation.</description>
    <label>Master Switch</label>
    <type>Checkbox</type>
</CustomField>