force-app/main/default/objects/BIGOTOOL_Settings__c/fields/Max_Batch_Concurrency__c.field-meta.xml
<CustomField>
    <fullName>Max_Batch_Concurrency__c</fullName>
    <description>Throttle for simultaneous archive batch jobs.</description>
    <label>Max Batch Concurrency</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>