force-app/main/default/objects/BIGOTOOL_Settings__c/fields/Visible_Archive_Objects_2__c.field-meta.xml
<CustomField>
    <fullName>Visible_Archive_Objects_2__c</fullName>
    <description>Overflow field concatenated with Visible_Archive_Objects__c when a user/profile needs to whitelist more object names than fit in 255 chars.</description>
    <label>Visible Archive Objects 2</label>
    <type>TextArea</type>
</CustomField>