force-app/main/default/objects/BIGOTOOL_Settings__c/fields/Visible_Archive_Objects__c.field-meta.xml
<CustomField>
    <fullName>Visible_Archive_Objects__c</fullName>
    <description>CSV whitelist of archive object API names this user/profile may view. Blank/null = full access to all archive objects. Non-blank = restricted to only the listed objects.</description>
    <label>Visible Archive Objects</label>
    <type>TextArea</type>
</CustomField>